DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <description>Age group for the participant (used in Level of Care calculation)</description>
    <inlineHelpText>Age group for the participant</inlineHelpText>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
                <label>Child (5-11)</label>
            </value>
            <value>
                <fullName>Adolescent</fullName>
                <label>Adolescent (12-17)</label>
            </value>
            <value>
                <fullName>Adult</fullName>
                <label>Adult (18-64)</label>
            </value>
            <value>
                <fullName>Older Adult</fullName>
                <label>Older Adult (65+)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>