DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/iar_dst_domain_1__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_1__c</fullName>
    <label>Symptom Severity and Distress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No problem in this domain</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Mild or sub diagnostic</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Severe</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Very severe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>