DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/iar_dst_domain_2__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_2__c</fullName>
    <label>Risk of Harm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No identified risk in this domain</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Low risk of harm</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Moderate risk of harm</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>High risk of harm</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Very high risk of harm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>