DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/iar_dst_domain_3__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_3__c</fullName>
    <label>Functioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No problems in this domain</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Mild impact</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Moderate impact</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Severe impact</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Very severe to extreme impact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>