DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/iar_dst_recommended_level_of_care__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_recommended_level_of_care__c</fullName>
    <label>Recommended Level of Care For Extract</label>
    <length>2</length>
    <type>Text</type>
</CustomField>