DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/zziar_dst_recommended_level_of_care__c.field-meta.xml
<CustomField>
    <fullName>zziar_dst_recommended_level_of_care__c</fullName>
    <formula>IF(
/* Level 5 Check */
	OR(
		TEXT(iar_dst_domain_1__c) = &quot;4&quot;,
		TEXT(iar_dst_domain_2__c) = &quot;4&quot;,
		TEXT(iar_dst_domain_3__c) = &quot;4&quot;
	),
	&quot;5&quot;,

	/* Level 1 Check */
	IF(
		OR(
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_7__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_8__c) &lt;= &quot;1&quot;
			),
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;2&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;3&quot;,
				TEXT(iar_dst_domain_8__c) &lt;= &quot;1&quot;
			)
		),
		&quot;1&quot;,
		IF(
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;2&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;3&quot;,
				TEXT(iar_dst_domain_8__c) &gt;= &quot;1&quot;
			),
			&quot;2+&quot;,
			/* Level 3 Check */
			IF(
				OR(
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						OR(
							TEXT(iar_dst_domain_1__c) = &quot;0&quot;,
							TEXT(iar_dst_domain_1__c) = &quot;1&quot;
						),
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;3&quot;
						)
					),
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;2&quot;,
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						)
					),
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;3&quot;,
						TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
						TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
						TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;
					)
				),
				&quot;3+&quot;,
				
				/* Level 4 Check */
				IF(
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;3&quot;,
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						)
					),
					&quot;4+&quot;,

					/* Else 2*/
					&quot;2&quot;
				)
			)
		)
	)
)</formula>
    <label>zzRecommended Level of Care For Extract</label>
    <type>Text</type>
</CustomField>