DevOps/force-app/main/default/objects/Assessment_IAR__c/fields/zzLevel_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>zzLevel_Of_Care__c</fullName>
    <formula>IF(
/* Level 5 Check */
	OR(
		TEXT(iar_dst_domain_1__c) = &quot;4&quot;,
		TEXT(iar_dst_domain_2__c) = &quot;4&quot;,
		TEXT(iar_dst_domain_3__c) = &quot;4&quot;
	),
	&quot;Level 5 - Acute and Specialist Community Mental Health Services&quot;,

	/* Level 1 Check */
	IF(
		OR(
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_7__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_8__c) &lt;= &quot;1&quot;
			),
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;2&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;3&quot;,
				TEXT(iar_dst_domain_8__c) &lt;= &quot;1&quot;
			)
		),
		&quot;Level 1 - Self Management&quot;,
		/* Level 2+ Check */
		IF(
			AND(
				TEXT(iar_dst_domain_1__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;,
				TEXT(iar_dst_domain_5__c) &lt;= &quot;2&quot;,
				TEXT(iar_dst_domain_6__c) &lt;= &quot;3&quot;,
				TEXT(iar_dst_domain_8__c) &gt;= &quot;1&quot;
			),
			&quot;Level 2 or above - Review assessment on Contextual Domains to determine most appropriate placement&quot;,
			/* Level 3 Check */
			IF(
				OR(
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						OR(
							TEXT(iar_dst_domain_1__c) = &quot;0&quot;,
							TEXT(iar_dst_domain_1__c) = &quot;1&quot;
						),
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;3&quot;
						)
					),
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;2&quot;,
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						)
					),
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;3&quot;,
						TEXT(iar_dst_domain_2__c) &lt;= &quot;1&quot;,
						TEXT(iar_dst_domain_3__c) &lt;= &quot;1&quot;,
						TEXT(iar_dst_domain_4__c) &lt;= &quot;1&quot;
					)
				),
				&quot;Level 3 or above - Review assessment on Contextual Domains to determine most appropriate placement&quot;,
				
				/* Level 4 Check */
				IF(
					AND(
						OR(
							TEXT(iar_dst_domain_1__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						),
						TEXT(iar_dst_domain_1__c) = &quot;3&quot;,
						OR(
							TEXT(iar_dst_domain_2__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_3__c) &gt;= &quot;2&quot;,
							TEXT(iar_dst_domain_4__c) &gt;= &quot;2&quot;
						)
					),
					&quot;Level 4 or above - Review assessment on Contextual Domains to determine most appropriate placement&quot;,

					/* Else 2*/
					&quot;Level 2 - Low Intensity Services&quot;
				)
			)
		)
	)
)</formula>
    <label>zzRecommended Level Of Care</label>
    <type>Text</type>
</CustomField>