DevOps/force-app/main/default/objects/Assessment_IAR__c/recordTypes/Assessment_IAR.recordType-meta.xml
<RecordType>
    <fullName>Assessment_IAR</fullName>
    <active>true</active>
    <label>Assessment - IAR</label>
</RecordType>