DevOps/force-app/main/default/objects/Assessment_IAR__c/validationRules/Cannot_Change_Recommended_Level_of_Care.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Recommended_Level_of_Care</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(Level_Of_Care__c))) &amp;&amp;  PRIORVALUE(Level_Of_Care__c) !=  Level_Of_Care__c</errorConditionFormula>
    <errorDisplayField>Level_Of_Care__c</errorDisplayField>
    <errorMessage>You cannot change the Recommended Level of Care once it is set.</errorMessage>
</ValidationRule>