DevOps/force-app/main/default/objects/Assessment_IAR__c/validationRules/Cannot_Change_RLoCExtract.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_RLoCExtract</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(iar_dst_recommended_level_of_care__c))) &amp;&amp;  PRIORVALUE(iar_dst_recommended_level_of_care__c) !=  iar_dst_recommended_level_of_care__c</errorConditionFormula>
    <errorDisplayField>iar_dst_recommended_level_of_care__c</errorDisplayField>
    <errorMessage>You cannot change the Recommended Level of Care Extract once it is set.</errorMessage>
</ValidationRule>